# RoadLoader

./: Cargo.toml  RoadLoader.fsx  build.rs  hostfxr.lib
.cargo/: config.toml
.github/workflows/: msbuild.yml
src/: appdomain.rs  assembly.rs  clr.rs  commandline.rs  file.rs  hostfxr.rs  main.rs  methodinfo.rs  patch.rs
src/clr/: core.rs  runtime_host.rs  util.rs
src/clr/core/: appdomain.rs  assembly.rs  methodinfo.rs
