[package]
name = "road_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-core = "0.61.0"

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Foundation",
    "Win32_System_ClrHosting",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ole",
    "Win32_System_Variant",
]